# EuclidsToolworks.github.io

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: index.md
