[project]
name = "euclidstoolworks"
version = "0.1.0"
description = ""
authors = [
    {name = "Kurt W. Andrews",email = "kurt.w.andrews@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
]

[tool.poetry]
packages = [{include = "euclidstoolworks", from = "src"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.12"
mkdocs-glightbox = "^0.4.0"
mkdocs-atom-plugin = "^0.0.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
